test/subjects/errors/invalid_foreach_array.php
<?php
	foreach(21 as $x) # {  phc-error: Invalid (literal) expression supplied for foreach() }
	{
	}
?>
